# card-server

./: .gitignore  Cargo.toml  LICENSE  README.md
migration/src/: lib.rs  m20220830_164929_users.rs  m20220830_165402_levels.rs  m20220903_091431_cards.rs  m20220911_132428_full_text_search_on_card.rs
migrations/: 20211106061041_users.down.sql  20211106061041_users.up.sql  20211118025956_levels.down.sql  20211118025956_levels.up.sql  20211118030109_users_id_fk_level_user_id.down.sql  20211118030109_users_id_fk_level_user_id.up.sql  20211118035555_cards.down.sql  20211118035555_cards.up.sql  20220125020524_make_email_unique.down.sql  20220125020524_make_email_unique.up.sql
src/: error_handling.rs  gql.rs  lib.rs  main.rs  pass_hash.rs  text_search.rs  tokenizer.rs
src/entity/: card.rs  cards.rs  level_setting.rs  level_settings.rs  mod.rs  prelude.rs  user.rs  users.rs
src/gql/: error_handling.rs  type_definations.rs
src/gql/type_definations/: level_setting.rs  user.rs
src/gql/type_definations/card/: mutation.rs  types.rs
src/gql/type_definations/level_setting/: mutation.rs  query.rs  subscription.rs  types.rs
src/gql/type_definations/user/: mutation.rs  query.rs  types.rs
src/traits/: mod.rs  type_casting.rs
