[package]
name = "card_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
dotenv = "0.15.0"
regex = "1.6.0"
async-graphql-warp = "4.0.12"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-uuid"], default_features = false}
tracing-subscriber = "0.3.3"
tracing = "0.1.29"
lazy_static = "1.4.0"
jsonwebtoken = "8.1.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.78"
uuid = "1.1.2"
redis = {version = "0.21.5", features = ["aio", "tokio-comp"]}
futures-util = "0.3.19"
[dependencies.async-graphql]
version = "4.0.12"
features = ["dataloader", "uuid"]